--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -1,8 +1,9 @@
-name: Deploy Doxygen Documentation to GitHub Pages
+name: Deploy Doxygen Documentation
+
 on:
   push:
     branches:
-      - main
+      - main  # Change this to your main branch name
 
 jobs:
   deploy:
@@ -11,17 +12,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build documentation
-        run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
